--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,7 +5,8 @@ $h-boston-blue: #2e86b7;
 $h-github: #24292e;
 $h-speed-normal: 0.5s;
 $h-navbar-font-size: 0.875rem;
-$h-navbar-logo-font-size: 2rem;
+$h-navbar-logo-font-size: 1.75rem;
+$h-navbar-logo-img-height: 2rem;
 $h-navbar-icon-color: initial-variables.$grey;
 $h-hr-special-background-color: $h-boston-blue;
 $h-h1-font-size: 1.75rem;
